--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
     implementation 'android.arch.lifecycle:livedata:1.1.1'
 
+    implementation 'com.google.android.gms:play-services-vision:20.1.0'
+    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
