--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
     implementation 'android.arch.lifecycle:livedata:1.1.1'
 
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
+
     implementation 'com.google.android.gms:play-services-vision:20.1.0'
     implementation files('libs\\YouTubeAndroidPlayerApi.jar')
 
