--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".MainActivity"
             android:screenOrientation="portrait">
@@ -18,6 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ScanActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".resultsactivity.ResultsActivity"
             android:screenOrientation="portrait"/>
         <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="ocr"/>
     </application>
