--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".resultsactivity.ResultsActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".YouTubePlayerActivity"
-            android:screenOrientation="portrait"/>
+            android:configChanges="orientation|screenSize"/>
         <activity android:name=".LoginActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".otp.OtpActivity"
