--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,7 +99,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
 
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
-
+    implementation 'com.github.yalantis:ucrop:2.2.3-native'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
