--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,6 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.1.0-alpha09'
 
-    implementation 'com.google.android.gms:play-services-vision:20.1.0'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
     // ViewModel and LiveData
@@ -97,6 +96,8 @@ dependencies {
     implementation "com.google.firebase:firebase-auth:$firebase_version"
     implementation 'com.google.firebase:firebase-messaging:20.1.5'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-core:17.4.3'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
 
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
     implementation 'com.github.yalantis:ucrop:2.2.3-native'
