[Goutam] Splash screen designed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".splash.SplashActivity"
+            android:screenOrientation="unspecified"/>
         <activity
             android:name=".MainActivity"
             android:screenOrientation="unspecified" />
