--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:usesCleartextTraffic="true">
 
         <activity
-            android:name=".WelcomeActivity"
+            android:name=".splash.SplashActivity"
             android:screenOrientation="unspecified">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,10 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".splash.SplashActivity"
+        <activity android:name=".WelcomeActivity"
             android:screenOrientation="unspecified"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".dashboard.MainActivity"
             android:screenOrientation="unspecified" />
         <activity
             android:name=".ScanActivity"
