--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,22 +38,21 @@ dependencies {
     def okhttp3_version = "4.2.2"
     def lifecycle_version = "2.1.0"
     def firebase_version = "19.3.0"
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
     //OkHttp3
     implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
     implementation 'android.arch.lifecycle:livedata:1.1.1'
-
     implementation 'com.google.android.material:material:1.1.0-alpha09'
-
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
     // ViewModel and LiveData
@@ -73,6 +72,7 @@ dependencies {
     // AndroidX libraries use this lightweight import for Lifecycle
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
     //Firebase dependencies
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
@@ -81,6 +81,7 @@ dependencies {
     // alternately - if using Java8, use the following instead of lifecycle-compiler
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation 'in.hourglass.mathrender:katexmathview:1.0.3'
+
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
@@ -92,17 +93,16 @@ dependencies {
 
     // alternately - if using Java8, use the following instead of lifecycle-compiler
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-
     implementation "com.google.firebase:firebase-auth:$firebase_version"
     implementation 'com.google.firebase:firebase-messaging:20.1.5'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-core:17.4.3'
     implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
     implementation 'com.github.yalantis:ucrop:2.2.3-native'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation files('libs/mint-5.2.5.jar')
 }
