--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:name="com.rs.roundupclasses.App"
         android:allowBackup="true"
@@ -35,6 +38,9 @@
             android:screenOrientation="portrait"/>
 
         <activity android:name="com.rs.roundupclasses.notify.NotificationActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".examcontent.DemoActivity"
             android:screenOrientation="portrait"/>
 
         <activity android:name="com.rs.roundupclasses.notify.NotificationDetail"
@@ -117,6 +123,15 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
+
+        <service
+            android:name=".utils.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
 
     </application>
 </manifest>
