youtube issue resolved

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -134,4 +134,12 @@
         </service>
 
     </application>
+<!--
+    to allow youtube player above android 10
+-->
+    <queries>
+        <intent>
+            <action android:name="com.google.android.youtube.api.service.START"/>
+        </intent>
+    </queries>
 </manifest>
